--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,57 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+
+
 buildscript {
     ext.kotlin_version = '1.2.71'
-    repositories {
-        google()
-        jcenter()
+    ext {
+        configs = [kotlin_version   : kotlin_version,
+                   applicationId    : 'com.newolf.logutils',
+                   compileSdkVersion: 28,
+                   buildToolsVersion: '28.0.0',
+                   minSdkVersion    : 18,
+                   targetSdkVersion : 28,
+                   versionCode      : 200,
+                   versionName      : '2.0.0',
+
+
+
+        ]
+
+        def supportLibraryVersion = '28.0.0'
+        def constraintLayoutVersion = '1.1.3'
+
+
+        deps = [supportCompat   : "com.android.support:support-compat:$supportLibraryVersion",
+                supportCoreUi   : "com.android.support:support-core-ui:$supportLibraryVersion",
+                supportFragment : "com.android.support:support-fragment:$supportLibraryVersion",
+                appcompatV7     : "com.android.support:appcompat-v7:$supportLibraryVersion",
+                design          : "com.android.support:design:$supportLibraryVersion",
+                gridlayoutV7    : "com.android.support:gridlayout-v7:$supportLibraryVersion",
+                supportV4       : "com.android.support:support-v4:$supportLibraryVersion",
+                vectorDrawable  : "com.android.support:support-vector-drawable:$supportLibraryVersion",
+                recyclerviewV7  : "com.android.support:recyclerview-v7:$supportLibraryVersion",
+                constraintLayout: "com.android.support.constraint:constraint-layout:$constraintLayoutVersion",
+                kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
+        ]
+
+
+
+
     }
+    repositories {
+        jcenter()
+        google()
+        maven { url 'https://jitpack.io' }
+    }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +62,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
